debugging in selection process, added sets...

--- a/style/selection.css
+++ b/style/selection.css
@@ -130,3 +130,11 @@ input#createGroupName {
 .groupBar {
     margin-bottom: 0.3em;
 }
+
+.setContainer {
+    width: 100%;
+}
+
+.setBar {
+    background-color: black;
+}
