--- a/style/main.css
+++ b/style/main.css
@@ -287,17 +287,32 @@ input:checked+.slider:before {
 
 .input-box {
     display: flex;
-    align-items: center;    
-    gap: 10px;              
-    margin: 20px;
+    align-items: center;
+    background-color: var(--background);
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
+    padding: 1em;
+    border-width: var(--borderWidth);
+    border-style: solid;
+    border-radius: var(--borderRadius);
+    background-color: var(--backgroundDarker);
+    border-color: transparent;
+    width: 100%;
 }
 
-#csvUploader {
+#csvUploader {    
     padding: 3px 15px;
     border: 2px solid #FFFFFF;
-    border-radius: 20px;
+    border-radius: 8px;
 }
 
 #progress {
     font-weight: bold;
+}
+
+#dlbtn {
+    background-color: var(--primaryBG);
+    height: 30px;
+    border-radius: 8px;
 }
