--- a/style/selection.css
+++ b/style/selection.css
@@ -190,4 +190,13 @@ input#fileNameEntry {
     background-color: var(--primaryBG);
     height: 30px;
     border-radius: 8px;
+    width: 120px;
+
+}
+
+#creditsContainer {
+  display: flex;               
+  justify-content: space-between; 
+  align-items: center; 
+  width:100%; 
 }
