--- a/style/main.css
+++ b/style/main.css
@@ -13,7 +13,8 @@
 .rowFlex {
     display: flex;
     flex-direction: row;
-    gap: 0.2em;
+    gap: 0.15em;
+    flex-wrap: wrap;
 }
 
 .colFlex {
